[CRD iOS] Fix crash on SetSurfaceSize(int, int)

We got quite a few crash reports on
DesktopViewport::SetSurfaceSize(int, int). My suspicion is that the
connection is dropped when the keyboard is being shown/hidden so
animateSurfaceSize: is called when gestureInterpreter is already a
nullptr, causing a segfault. This is very hard to repro though since
the connection must be dropped (by killing the host?) during the
animation and the animation must tick one frame before the view closes
itself.

This CL fixes this by making both interpreters have the same lifetime
as RemotingClient and use SetContext() to enable/disable them.

Bug: 828204
Change-Id: I41c14ae8bc1d6edce8f3c32eb958256809821425
Reviewed-on: https://chromium-review.googlesource.com/1000096
Reviewed-by: Jamie Walch <jamiewalch@chromium.org>
Commit-Queue: Yuwei Huang <yuweih@chromium.org>
Cr-Commit-Position: refs/heads/master@{#548969}
Former-commit-id: 2967489d082e4175e49956f5dd5b6d50468c5f73