remoting/client/input/keyboard_interpreter.cc
@@ -10,19 +10,34 @@
 
 namespace remoting {
 
-KeyboardInterpreter::KeyboardInterpreter(ClientInputInjector* input_injector) {
-  // TODO(nicholss): This should be configurable.
-  input_strategy_.reset(new TextKeyboardInputStrategy(input_injector));
-}
+KeyboardInterpreter::KeyboardInterpreter() = default;
 
 KeyboardInterpreter::~KeyboardInterpreter() = default;
 
+void KeyboardInterpreter::SetContext(ClientInputInjector* input_injector) {
+  // TODO(nicholss): This should be configurable.
+  if (input_injector) {
+    input_strategy_ =
+        std::make_unique<TextKeyboardInputStrategy>(input_injector);
+  } else {
+    input_strategy_.reset();
+  }
+}
+
 void KeyboardInterpreter::HandleTextEvent(const std::string& text,
                                           uint8_t modifiers) {
+  if (!input_strategy_) {
+    return;
+  }
+
   input_strategy_->HandleTextEvent(text, modifiers);
 }
 
 void KeyboardInterpreter::HandleDeleteEvent(uint8_t modifiers) {
+  if (!input_strategy_) {
+    return;
+  }
+
   base::queue<KeyEvent> keys;
   // TODO(nicholss): Handle modifers.
   // Key press.
@@ -35,6 +50,10 @@ void KeyboardInterpreter::HandleDeleteEvent(uint8_t modifiers) {
 }
 
 void KeyboardInterpreter::HandleCtrlAltDeleteEvent() {
+  if (!input_strategy_) {
+    return;
+  }
+
   base::queue<KeyEvent> keys;
 
   // Key press.
@@ -51,6 +70,10 @@ void KeyboardInterpreter::HandleCtrlAltDeleteEvent() {
 }
 
 void KeyboardInterpreter::HandlePrintScreenEvent() {
+  if (!input_strategy_) {
+    return;
+  }
+
   base::queue<KeyEvent> keys;
 
   // Key press.
